--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "tesseract.js": "^5.1.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
